# SSLSocket

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/SSLSocket/: exceptions.py  utils.py
src/SSLSocket.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/SSLSocket/cert/: 55dfe063.0  rootCA.crt  rootCA.key
tests/: main.py
